--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,7 +24,8 @@
         </provider>
 
         <activity android:name=".ImportActivity"
-            android:label="Import Theme">
+            android:label="Import Theme"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.SEND" />
                 <category android:name="android.intent.category.DEFAULT" />
@@ -105,7 +106,8 @@
             android:configChanges="orientation|screenSize|keyboardHidden" >
         </activity>
 
-        <activity android:name=".SplashScreen">
+        <activity android:name=".SplashScreen"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
