--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 32
-    buildToolsVersion "30.0.2"
+    buildToolsVersion '30.0.2'
 
     defaultConfig {
         applicationId "com.mirambeau.termcalc"
@@ -60,8 +60,8 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
-    implementation 'com.azeesoft.lib.colorpicker:colorpicker:1.0.8@aar'
-    implementation 'com.github.AppIntro:AppIntro:6.0.0'
     implementation 'io.github.kexanie.library:MathView:0.0.6'
     implementation 'com.github.Dimezis:BlurView:version-2.0.2'
+    implementation 'com.azeesoft.lib.colorpicker:colorpicker:1.0.8@aar'
+    implementation 'com.github.AppIntro:AppIntro:6.2.0'
 }
