--- a/build.gradle
+++ b/build.gradle
@@ -1,15 +1,18 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
+    ext {
+        buildToolsVersion = "30.0.2"
+        minSdkVersion = 21
+        targetSdkVersion = 32
+    }
     repositories {
         google()
-        jcenter()
-        maven {
-            url 'https://dl.bintray.com/azeesoft/maven'
-        }
+        mavenCentral()
+        gradlePluginPortal()
     }
 
     dependencies {
-        classpath "com.android.tools.build:gradle:4.0.2"
+        classpath 'com.android.tools.build:gradle:4.0.2'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -23,11 +26,12 @@ plugins {
 
 allprojects {
     repositories {
+        google()
+        gradlePluginPortal()
         mavenCentral()
         mavenLocal()
         maven { url "https://jitpack.io" }
-        google()
-        jcenter()
+        maven { url 'https://dl.bintray.com/azeesoft/maven' }
     }
 }
 
